# dataplatform-modern-dbt

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Dockerfile  README.md  diagnose_api.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  start-server.sh  tailwind.config.js  validate_pipeline.py
Guide/Runbook/: ENTERPRISE_PLUGINS_COMPLETE.md  FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_EXAMPLES.md  PIPELINE_AUTO_DISCOVERY_SUMMARY.md  PLUGINS_GUIDE.md  PLUGINS_IMPLEMENTATION_SUMMARY.md  PLUGIN_QUICK_REFERENCE.md  QUICKSTART.md
dataplatform/: __init__.py
dataplatform/cli/: main.py
dataplatform/core/: alerts.py  api.py  auth.py  catalog.py  config.py  costs.py  dag.py  database.py  executor.py  git_integration.py  lineage.py  logging_config.py  (+12 more)
demo/: README.md
pipelines/: README.md  ecommerce_sales_intelligence.yaml  multi_source_pipeline.yaml  my_dbt_run_and_test.yaml  my_pipeline.yaml  sales_pipeline.yaml  sample_pipeline.yaml  test_pipeline.yaml
templates/: api_ingest_and_validate.yaml  daily_python_etl.yaml  dbt_run_and_test.yaml  etl_postgres_to_duckdb.yaml
tests/: test_alerts.py  test_api_sync_run.py  test_auth.py  test_catalog.py  test_config_templates.py  test_core_config_validation.py  test_costs.py  test_database.py  test_dbt_plugin.py  test_job_builder_yaml_shapes.py  test_lineage.py  test_metrics.py  test_parallel_executor.py  test_pipeline_generator.py  test_quality.py  test_rbac_endpoints.py  test_secrets.py  test_semantic_metrics.py  test_shell_executor.py  test_templates.py  test_triggers.py  test_validation_endpoint.py  test_versioning.py
(+40 files in other folders)
